Add navrar and its style

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+.shop-name {
+  color: #b3a20c;
+  font-size: 30px;
+  font-weight: 700;
+}
 
+.background-image img {
+  width: 100%;
+}
 
-/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
+.nav-link {
+  color: white;
+  font-size: 30px;
+}
+
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uL3Nhc3Mvc3R5bGUuc2NzcyIsInN0eWxlLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNJLGNBQUE7RUFDQSxlQUFBO0VBQ0EsZ0JBQUE7QUNDSjs7QURFQTtFQUNJLFdBQUE7QUNDSjs7QURDQTtFQUNJLFlBQUE7RUFDQSxlQUFBO0FDRUoiLCJmaWxlIjoic3R5bGUuY3NzIn0= */
